--- a/NortWindAjaxProject/Views/_ViewImports.cshtml
+++ b/NortWindAjaxProject/Views/_ViewImports.cshtml
@@ -1,3 +1,10 @@
 ﻿@using NortWindAjaxProject
 @using NortWindAjaxProject.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+
+
+@using System.Globalization
+@using Microsoft.Extensions.Localization
+@using Microsoft.AspNetCore.Mvc.Localization
+@using Microsoft.AspNetCore.Localization
+
