--- a/NortWindAjaxProject/Views/Supplier/Index.cshtml
+++ b/NortWindAjaxProject/Views/Supplier/Index.cshtml
@@ -7,11 +7,24 @@
 @{
 	ViewData["Title"] = Localizer["Suppliers"];
 }
+<style>
+	.containerForm {
+		width: 500px;
+		clear: both;
+	}
+
+		.containerForm input {
+			width: 100%;
+			clear: both;
+		}
+</style>
+
+
 <div class="supplierListDiv">
 		<table class="table table-dark supplierTable">
 			<thead>
 			<h1>@Localizer["Suppliers"]</h1>
-				<a class="btn btn-outline-success" id="addBtn">@Localizer["Add Supplier"]</a>
+			<a class="btn btn-outline-success"  id="addBtn">@Localizer["Add Supplier"]</a>
 				<tr>
 				    <td>@Localizer["Company Name"]</td>
 					<td>@Localizer["Contact Name"]</td>
@@ -34,7 +47,7 @@
 					<td class="supplierPhone"></td>
 					<td>
 						<span>
-						<a class=" btn btn-primary " id="updateBtn" name="updateBtn" data-id="">@Localizer["Update"]</a>
+						<a class=" btn btn-primary " id="updateBtn" name="updateBtn"  data-id="">@Localizer["Update"]</a>
 						</span>
 					</td>
 				<td>
@@ -47,58 +60,79 @@
 		</table>
 	</div>
 
-<div>
-	<form class="form-control" id="infoForm">
-		<div class="form-group">
-			<label>@Localizer["Company Name"] </label>
-			<input id="companyName"  name="companyName" required maxlength="40" class="form-control" />
-			<span class="error text-danger companyError" hidden="hidden">@Localizer["companyError"]</span>
 
-		</div>
-		<div class="form-group">
-			<label>@Localizer["Contact Name"] </label>
-			<input id="contactName" name="contactName" required maxlength="30" class="form-control" />
-			<span class="error text-danger contactError" hidden="hidden">@Localizer["contactError"]</span>
+<!-- ---------------------------         MODAL FİELD ------------------------------------------- -->
 
-		</div>
-		<div class="form-group">
-			<label>@Localizer["Address"] </label>
-			<input id="address" name="address" required maxlength="60" class="form-control" />
-			<span class="error text-danger addressError" hidden="hidden">@Localizer["addressError"]</span>
-		</div>
-		<div class="form-group">
-			<label>@Localizer["City"]</label>
-			<input id="city" name="city" required maxlength="15" class="form-control" />
-			<span class="error text-danger cityError" hidden="hidden">@Localizer["cityError"]</span>
-		</div>
-		<div class="form-group">
-			<label>@Localizer["Country"]</label>
-			<input id="country" name="country" required maxlength="15" class="form-control" />
-			<span class="error text-danger countryError" hidden="hidden">@Localizer["countryError"]</span>
-		</div>
-		<div class="form-group">
-			<label>@Localizer["Phone"] </label>
-			<input id="phone" name="phone" required maxlength="15" class="form-control" />
-			<span class="error text-danger phoneError" hidden="hidden">@Localizer["phoneError"]</span>
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+	<div class="modal-dialog modal-xl">
+		<div class="modal-content">
+			<div class="modal-header">
+				<h1 class="modal-title fs-5" id="exampleModalLabel"></h1>
+				<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+			</div>
+			<div class="modal-body">
+				<div class="containerForm">
+					<form id="infoForm">
+						<div class="form-group">
+							<label align="left">@Localizer["Company Name"] </label>
+							<input id="companyName" name="companyName" align="center" required maxlength="40" />
+							<span class="error text-danger companyError" hidden="hidden">@Localizer["companyError"]</span>
 
-		</div>
-		<div class="form-group">
-			<a class="btn btn-primary" id="updateSupplier" data-id="">@Localizer["Update"]</a>
-			<a class="btn btn-primary" id="addSupplier" data-id="">@Localizer["Create"]</a>
+						</div>
+						<div class="form-group">
+							<label align="left">@Localizer["Contact Name"] </label>
+							<input id="contactName" name="contactName" align="center" required maxlength="30" />
+							<span class="error text-danger contactError" hidden="hidden">@Localizer["contactError"]</span>
 
+						</div>
+						<div class="form-group">
+							<label align="left">@Localizer["Address"] </label>
+							<input id="address" name="address" align="center" required maxlength="60" />
+							<span class="error text-danger addressError" hidden="hidden">@Localizer["addressError"]</span>
+						</div>
+						<div class="form-group">
+							<label>@Localizer["City"]</label>
+							<input id="city" name="city" required maxlength="15" />
+							<span class="error text-danger cityError" hidden="hidden">@Localizer["cityError"]</span>
+						</div>
+						<div class="form-group">
+							<label>@Localizer["Country"]</label>
+							<input id="country" name="country" required maxlength="15" />
+							<span class="error text-danger countryError" hidden="hidden">@Localizer["countryError"]</span>
+						</div>
+						<div class="form-group">
+							<label>@Localizer["Phone"] </label>
+							<input id="phone" name="phone" required />
+							<span class="error text-danger phoneError" hidden="hidden">@Localizer["phoneError"]</span>
+
+						</div>
+						<div class="form-group">
+							<a class="btn btn-primary" id="updateSupplier" data-id="">@Localizer["Update"]</a>
+							<a class="btn btn-primary" id="addSupplier" data-id="">@Localizer["Create"]</a>
+
+						</div>
+					</form>
+				</div>
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">@Localizer["Close"]</button>
+			</div>
 		</div>
-	</form>
+	</div>
 </div>
+
+
+
+
+
 <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.5/jquery.validate.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
-
-
 <script>
 	$(document).ready(function(){
-		$(".form-control").hide();
-		$(".supplierListDiv").show();
 	    loadDataFromAjax();
+
+	   
 
 		//-------------------------SUPPLIERLIST AJAX REQUEST-----------------------------------//
 
@@ -135,8 +169,9 @@
 
 			$("#updateSupplier").show();
 			$("#addSupplier").hide();
-			$(".form-control").show();
-			$(".supplierListDiv").hide();
+			$("#exampleModal").modal("show");
+			$("#exampleModalLabel").text("@Localizer["Update"]");
+
 		});
 
 
@@ -153,8 +188,10 @@
 			//----------------------------//
 			$("#addSupplier").show();
 			$("#updateSupplier").hide();
-			$(".form-control").show();
-			$(".supplierListDiv").hide();
+			$("#exampleModal").modal("show");
+			$("#exampleModalLabel").text("@Localizer["Create"]");
+
+
 		});
 
 
@@ -185,14 +222,11 @@
 					data: JSON.stringify(data),
 
 					success: function (res) {
-						alert("Updated succesfully");
+						alert("@Localizer["UpdateSuccess"]");
 						$(".supplierTable tbody tr").remove();
 						loadDataFromAjax();
-						$(".form-control").hide();
-						$(".supplierListDiv").show();
-
+						$("#exampleModal").modal("hide");
 						console.log("Successful");
-
 						createRow(data);
 					}, error: function (res) {
 						alert("Failed:" + res);
@@ -201,7 +235,7 @@
 
 			}
 			else {
-				alert("Please Check Your Form İnformation Again!");
+				alert("@Localizer["formControlWarning"]");
 			}
 		});
 
@@ -227,10 +261,10 @@
 					method: "POST",
 
 					success: function (res) {
-						alert("Created succesfully");
+						alert("@Localizer["CreateSuccess"]");
+						$("#exampleModal").modal("hide");
 						console.log("Successful REs:", res);
-						$(".form-control").hide();
-						$(".supplierListDiv").show();
+
 
 						createRow(res);
 					}, error: function (res) {
@@ -243,7 +277,7 @@
 
 			     }
 			else{
-				alert("Please Check Your Form İnformation Again!");
+				alert("@Localizer["formControlWarning"]");
 			};
 							
 
@@ -258,14 +292,14 @@
 
 		$(document).on("click", ".deleteBtn", function (event) {
 			var supplierIdToDelete = $(event.currentTarget).attr("data-id");
-			if (confirm("Are You Sure? The Supplier Will Delete")){
+			if (confirm("@Localizer["DeleteConfirm"]")) {
 					$.ajax({
 
 						url: "@Url.Action("Delete","Supplier")",
 						method: "POST",
 						data: { "supplierId": supplierIdToDelete },
 							success: function (res) {
-							alert("Deleted succesfully");
+						alert("@Localizer["DeleteSuccess"]");
 							$(event.currentTarget).parent().parent().parent().remove();
 							console.log("Successful");
 						}, error: function (res) {
@@ -332,6 +366,8 @@
 		}
 
 
+
+
 		//------------------------Validation-------------------------------------//
 
 	@{
@@ -340,10 +376,11 @@
 	};		
 	
 
-	 var lang="@currentRequestCulture.RequestCulture.UICulture.Name)";
-		console.log("lANGUAGE:",lang);
+	 var lang="@currentRequestCulture.RequestCulture.UICulture.Name";
+		console.log("lANGUAGE:"+lang);
 
 
+	
 
 
 			$("#infoForm").validate({
@@ -377,8 +414,16 @@
 					},
 					phone: {
 						required: true,
-						minlength: 5,
-						maxlength: 24
+						minlength: 9,
+						maxlength:
+						function(){
+							console.log("lang",lang)
+							if(lang=="en-US"){
+								return 10;
+							}else{
+								return 11;
+							}
+						}
 					}
 				},
 				messages: {
